--- a/css/estilo.css
+++ b/css/estilo.css
@@ -413,5 +413,69 @@ article {
     
 }
 
+/* Estrategia Responsive: Mobile Last */
+@media (max-width:1150px) {
+
+    .header nav a img {
+        width: 150px;
+    }
+
+    .header nav ul {
+        flex-wrap: wrap;
+        align-content: center;
+
+    }
+
+    .header nav ul li a {
+        /* font-size: 10px; */
+        margin: 0;
+        padding: 0;
+        font-size: 15px;
+    }
+
+    .header .menu {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        align-content: flex-end;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+
+    }
+
+
+    .header .banner img {
+
+        height: 120px;
+        width: 100vw;
+    }
+
+    /* Estrategia Responsive: Mobile Last Page Index*/
+    .container {
+        grid-template-columns: 150px;
+        grid-template-rows: repeat(4, 150px);
+        /* grid-auto-rows: 1fr; */
+        gap: 5px 5px;
+
+        grid-auto-flow: row;
+        grid-template-areas:
+            "cancun "
+            "disney"
+            "roma"
+            "africa";
+        justify-content: center;
+
+    }
+
+    /* Estrategia Responsive: Mobile Last Page destino*/
+    .section_video_contenedor {
+        
+        flex-direction: column; 
+        
+    }
+    
+}
+
+
 
 
