--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: sans-serif;
 }
 
 /* -----Header-----*/
-.header nav {
-    /* background-color: #000000;  */
+header {
+    background-color: #000000;
 }
 
-/*.Pone el logo y el menu ,uno al lado del otro*/
+/*imagen del logo*/
+.header nav a img {
+    width: 300px;
+    padding: 10px;
+}
 
+/* Pone el logo y el menu ,uno al lado del otro */
 .header nav {
     display: flex;
     flex-direction: row;
@@ -18,37 +24,31 @@
     align-items: center
 }
 
+/* Le dá un zoom al logo */
+.imagen-logo {
+    cursor: pointer;
+    transition: 2s;
+}
+
+a .imagen-logo:hover {
+    transform: scale(1.2);
+    transition: 2s;
+}
+
 /*Botones neon*/
 .btn-neon {
     position: relative;
     padding: 15px 30px;
-    color: #f70793;
+    color: orange;
     letter-spacing: 1px;
     font-size: 24px;
     text-decoration: none;
     transition: 2s;
-
 }
 
 .btn-neon:hover {
-    background-color: #f70793;
-    box-shadow: 0 0 10px #f70793, 0 0 200px #f70793, 0 0 80px #f70793;
-
-}
-
-
-
-
-
-
-
-/*.imagen del logo*/
-.header nav a img {
-
-    width: 300px;
-
-
-
+    background-color: #ffa500;
+    box-shadow: 0 0 10px #ffa500, 0 0 200px #ffa500, 0 0 80px #ffa500;
 }
 
 /* Saca las viñetas del menú - Pone en horizontal las opciones de menu*/
@@ -57,10 +57,7 @@
     list-style: none;
     height: 50px;
     align-items: center;
-
-
 }
-
 
 .header nav ul li a {
     font-size: 25px;
@@ -69,33 +66,9 @@
     padding: 0 10px;
     width: 100vw;
     justify-content: center;
-    #efff14box-shadow: 3px 3px 3px 3px rgb(250, 0, 125)
+    box-shadow: 3px 3px 3px 3px rgb (250, 0, 125);
+    border-radius: 20px;
 }
-
-.paquetes_titulobanner {
-    text-align: center;
-}
-
-.seccion1-index h2 {
-    color: #f80663;
-}
-
-.seccion1-index .articulo1 img {
-    width: 500px;
-    image-orientation: center;
-}
-
-article {
-    /* border: 1px solid yellow; */
-    margin: 10px;
-    padding: 10px;
-}
-
-.contenedor {
-    display: flex;
-    justify-content: center;
-}
-
 
 /* Pseudoclases */
 
@@ -106,19 +79,107 @@ article {
     /* padding: 0 1rem; */
 }
 
-/* Modifica estilos del boostrap cards */
-.imagenes_cards img {
-    width: 550px;
-    height: 350px;
+/* Banner */
+#slider {
+    width: 100%;
+    background-color: #007bb5;
+    /* border: solid white; */
+    overflow: hidden;
+
+
+    #contenedor {
+        display: grid;
+        grid-template-columns: 100% 100% 100%;
+        width: 100%;
+        animation-name: mover;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        flex-wrap: nowrap; 
+       
+    }
 }
 
-.card {
-    align-items: center;
+#imagen1 {
+    background-image: url('../resources/definbanner.jpg');
+    width: 100%;
+    height: 440px;
+    background-size: cover;
+
+}
+
+#imagen2 {
+    background-image: url('../resources/banner2.jpg');
+    width: 100%;
+    height: 440px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
     justify-content: center;
+
+}
+
+#imagen3 {
+    background-image: url('../resources/banner3.jpg');
+    width: 100%;
+    height: 440px;
+    background-size: cover;
+    position: relative;
+    background-position: center;
+
+}
+
+.banner_fuente {
+    text-align: center;
+    color: white;
+    margin-top: 5%;
+
+}
+
+@keyframes mover {
+
+    25% {
+        margin-left: 0%;
+    }
+
+    28% {
+        transition-delay: 5s;
+        margin-left: -100%;
+    }
+
+    54% {
+        transition-delay: 5s;
+        margin-left: -100%;
+    }
+
+    58% {
+        transition-delay: 5s;
+        margin-left: -200%;
+    }
+
+    95% {
+        transition-delay: 5s;
+        margin-left: -200%;
+    }
+
+    100% {
+        transition-delay: 5s;
+        margin-left: 0%;
+    }
+
 }
 
 /* -----Main-----*/
+main {
+    padding: 50px;
+    background-color: #ece9e9;
+    background-image: linear-gradient(#a8ac84dc, #dab617ce);
+}
+
 /* --Grilla--*/
+.main_titulogrilla {
+    text-align: center;
+}
+
 .container {
     display: grid;
     grid-template-columns: repeat(4, 150px);
@@ -170,7 +231,7 @@ article {
     background-size: cover;
 }
 
-/* --Carousel de imágenes de pag Alojamientos--*/
+/* --Page alojamientos - Carousel de imágenes de --*/
 .boots-modif-ancho {
     width: 50%;
     margin: auto;
@@ -185,9 +246,11 @@ article {
     justify-content: center;
 
 }
-.contacto_estilo_parrafo{
+
+.contacto_estilo_parrafo {
     text-align: center;
 }
+
 .section_video_contenedor iframe {
     width: 300px;
     height: 400px;
@@ -195,12 +258,9 @@ article {
 }
 
 /* --Page contacto - tamaño de mapa(iframe)-*/
-.map_iframe 
-{
+.map_iframe {
     display: flex;
     justify-content: center;
-   
-    
 }
 
 
@@ -208,10 +268,9 @@ article {
 /* Iconos del footer */
 .footer {
     background-color: #000000;
-    color: white;
+    color: orange;
     height: 200px;
     text-align: center;
-
 }
 
 .footer ul {
@@ -335,13 +394,31 @@ article {
 /* Estrategia Responsive: Mobile Last */
 @media (max-width:1150px) {
 
-    .header nav a img {
-        width: 150px;
+    #imagen1 {
+        height: 200px;
+        width: 100vw;
+        background-size: cover;
+
     }
+
+    #imagen2 {
+
+        height: 200px;
+        width: 100vw;
+        background-size: cover;
+
+    }
+
+    #imagen3 {
+
+        height: 200px;
+        width: 100vw;       
+        }
 
     .header nav ul {
         flex-wrap: wrap;
         align-content: center;
+       
 
     }
 
@@ -363,11 +440,11 @@ article {
     }
 
 
-    .header .banner img {
+    /* .header .banner img {
 
         height: 120px;
         width: 100vw;
-    }
+    } */
 
     /* Estrategia Responsive: Mobile Last Page Inicio*/
     .container {
@@ -388,11 +465,11 @@ article {
 
     /* Estrategia Responsive: Mobile Last Page destino*/
     .section_video_contenedor {
-        
-        flex-direction: column; 
-        
+
+        flex-direction: column;
+
     }
-    
+
 }
 
 /* Estrategia Responsive: Mobile Last */
@@ -426,11 +503,11 @@ article {
     }
 
 
-    .header .banner img {
+    /* .header .banner img {
 
         height: 120px;
         width: 100vw;
-    }
+    } */
 
     /* Estrategia Responsive: Mobile Last Page Index*/
     .container {
@@ -451,13 +528,20 @@ article {
 
     /* Estrategia Responsive: Mobile Last Page destino*/
     .section_video_contenedor {
-        
-        flex-direction: column; 
-        
+
+        flex-direction: column;
+
     }
-    
+
 }
 
+/* Modifica estilos del boostrap cards */
+.imagenes_cards img {
+    width: 550px;
+    height: 350px;
+}
 
-
-
+.card {
+    align-items: center;
+    justify-content: center;
+}
